# beaver-calc-studio

./: .env.example  .env.production  .gitignore  IMPLEMENTATION_STATUS.md  add-docx-export.js  add-whatif.mjs  cspell.json  deploy.sh  docker-compose.prod.yml  docker-compose.yml  package-lock.json
backend/: .env.example  Dockerfile  README.md  app.py  init_db.py  package-lock.json  pyproject.toml  requirements.txt  requirements_local.txt  wsgi.py
backend/beaver_calc/: __init__.py  config.py  events.py  extensions.py  models.py
backend/beaver_calc/api/: __init__.py  docs.py  routes.py
backend/beaver_calc/auth/: __init__.py  routes.py
backend/beaver_calc/calculators/: __init__.py  base.py  loader.py
backend/beaver_calc/calculators/abutments_design/: __init__.py  calculator.py  schema.py
backend/beaver_calc/calculators/access_ramps/: __init__.py  calculator.py
backend/beaver_calc/calculators/anchor_bolt/: __init__.py  calculator.py
backend/beaver_calc/calculators/base_plate/: __init__.py  calculator.py
backend/beaver_calc/calculators/batters/: __init__.py  calculator.py
backend/beaver_calc/calculators/beam_solver/: calculator.py
backend/beaver_calc/calculators/bearing_reactions_design/: __init__.py  calculator.py  (+1 more)
backend/beaver_calc/reports/: __init__.py  generator.py
backend/migrations/versions/: 734df5ab16a7_initial_schema.py
backend/tests/: conftest.py  test_all_calculators.py  test_api_routes.py  test_auth.py  test_falsework.py  test_pad_footing.py  test_phase5_features.py  test_rc_slab_bending.py  test_registry.py  test_steel_beam_bending.py
(+521 files in other folders)
