[tool.poetry]
name = "beaver-calc-backend"
version = "0.1.0"
description = "BeaverCalc Studio Backend"
authors = ["Beaver Bridges Ltd <info@beaverbridges.co.uk>"]
readme = "README.md"
packages = [{include = "beaver_calc"}]

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.0"
flask-cors = "^4.0.0"
flask-jwt-extended = "^4.6.0"
sqlalchemy = "^2.0.0"
psycopg2-binary = "^2.9.0"
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
pint = "^0.23.0"
numpy = "^1.26.0"
scipy = "^1.11.0"
redis = "^5.0.0"
rq = "^1.15.0"
flask-socketio = "^5.3.0"
python-socketio = "^5.10.0"
jinja2 = "^3.1.0"
weasyprint = "^61.0"
python-docx = "^1.1.0"
openpyxl = "^3.1.0"
ezdxf = "^1.2.0"
python-multipart = "^0.0.6"
uvicorn = "^0.24.0"
gunicorn = "^21.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
black = "^23.0.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
mypy = "^1.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
